Closed Bug 1766764 Opened 4 years ago Closed 4 years ago

WARNING: Failed to remove transaction listener from the editor: 'removedTransactionListener', file /builds/worker/checkouts/gecko/editor/composer/nsEditingSession.cpp:448

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox102 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

Details

Attachments

(1 file)

There are too many warnings in WPT, mochitest log.

Although it's called multiple times is odd that but it should not try to
remove same listener after once it succeeded doing it. Note that the listener
is created before calling AddTransactionListener so that it should be no
problem to make it forget the removed listener.

Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/e734804af78d Make `nsEditingSession::RemoveListenersAndControllers` forget the used listener if it succeeded removing it from the editor r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: