Bug 1766764 - Make `nsEditingSession::RemoveListenersAndControllers` forget the used listener if it succeeded removing it from the editor r=m_kato

Although it's called multiple times is odd that but it should not try to
remove same listener after once it succeeded doing it.  Note that the listener
is created before calling `AddTransactionListener` so that it should be no
problem to make it forget the removed listener.

Differential Revision: https://phabricator.services.mozilla.com/D144906